# lg-gitlab-release-notes

./: .env.example  .gitignore  README.md  langgraph.json  main.py  pyproject.toml
.claude/: settings.local.json
src/: config.py
src/agents/: collector.py  writer.py
src/graph/: async_workflow.py  state.py
src/tools/: gitlab_langchain_tools.py
